# raijinclv2

./: CMakeLists.txt  LICENSE  README
include/: raijin.hpp  raijin_complex.hpp  rtimer.hpp
src/: CMakeLists.txt  gemm.cpp  prodMultiDimComplex.cl  prodOneDimComplex.cl  prodTwoDimComplex.cl  raijintune.cpp  reduce.cpp  rgemmtune.cpp  sumMultiDimComplex.cl  sumOneDimComplex.cl  sumTwoDimComplex.cl  trans.cpp  transtune.cpp  unitary.cpp  zgemm.cpp  zgemmtune.cpp
test/: CMakeLists.txt  raijintest.cpp
